--- a/Python_EXP_2.ipynb
+++ b/Python_EXP_2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDgdCJVdLn5Emz0+GXIyz/"
+      "authorship_tag": "ABX9TyNTUB1NJYFnOc9VxgzeHGxh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/singhpriyansh2006-rgb/Priyansh-/blob/main/Python_EXP_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -33,6 +44,15 @@
       ],
       "metadata": {
         "id": "5QLpRDsLBkzO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "url-"
+      ],
+      "metadata": {
+        "id": "5c-ZCOf7duTJ"
       }
     },
     {
