--- a/PYTHON_EXP_3.ipynb
+++ b/PYTHON_EXP_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxavy0gzNR8EjOSz+2RvJG",
+      "authorship_tag": "ABX9TyMutUHyxgi+vVMOE28UHwgA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,6 +46,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "url -"
+      ],
+      "metadata": {
+        "id": "BOptLZhieBgJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#WAP to Find a factorial of given number\n",
@@ -68,7 +77,7 @@
         "id": "CF4UcAbrHBUi",
         "outputId": "d6ea6770-76ca-49d4-f757-e02b603f4e3c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +115,7 @@
         "id": "i-ff4OsUH6FA",
         "outputId": "a042fa93-507a-48df-c5fc-61937128a643"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +158,7 @@
         "id": "ibaSmhdAIP3d",
         "outputId": "9b20d359-5285-4c9a-81e1-bc3f9b48105b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +205,7 @@
         "id": "ICVTAMBdIlk-",
         "outputId": "23ad4acc-42ae-4836-e20a-29a4c2306803"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +241,7 @@
         "id": "VYqut586I6iG",
         "outputId": "320ebcec-7d3b-4ed1-b528-64365b421b27"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +274,7 @@
         "id": "6pAfTN0ZJORV",
         "outputId": "9bd9f046-31ad-427e-d0f4-65aa49c0cdd0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +308,7 @@
         "id": "Pgx0Hq_tJl3P",
         "outputId": "286cc229-5aa3-47db-eb02-d171b9f90447"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +336,7 @@
         "id": "YKm6o30WJxhe",
         "outputId": "70e8de42-69e3-42f3-eea4-fa1bb8312869"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +364,7 @@
         "id": "dQicC5HVKKri",
         "outputId": "1b93c137-d06c-44fe-d9fa-7efa86b7cdf1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +410,7 @@
         "id": "KIme2mfRKa-S",
         "outputId": "bf2e5640-c213-47ee-b5d9-12894afe53b9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +444,7 @@
         "id": "kOVJwj9UKrPv",
         "outputId": "3ecdd39a-341a-4e4d-9dd8-acc4400bbf05"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
