--- a/PYTHON_EXP_3.ipynb
+++ b/PYTHON_EXP_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMutUHyxgi+vVMOE28UHwgA",
+      "authorship_tag": "ABX9TyNC/RoOMZSEyhrfkn/ziCGx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "url -"
+        "url -https://github.com/singhpriyansh2006-rgb/Priyansh-/blob/main/PYTHON_EXP_3.ipynb"
       ],
       "metadata": {
         "id": "BOptLZhieBgJ"
